test_apps/test-typechecker/fail/entitynulltype.app
application test

section datamodel

  entity User {
    authoredPapers :: Null
  }